# vits

./: .gitignore  requirements.txt
configs/: obama.json
src/: commons.py  data_utils.py  mel_processing.py  modules.py  preprocess.py  train.py  utils.py
src/layers/: duration_predictor.py  generator.py  posterior_encoder.py  residual_coupling.py  text_encoder.py
src/layers/attention/: decoder.py  encoder.py  ffn.py  multihead.py
src/models/: discriminator.py  synthesizer.py
src/monotonic_align_rs/: Cargo.toml  pyproject.toml
src/monotonic_align_rs/src/: lib.rs
src/text/: cleaners.py  symbols.py
