[package]
name = "monotonic_align"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "monotonic_align"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.10.5"
pyo3 = { version = "0.18.0", features = ["extension-module"] }
rayon = "1.6.1"
